Closed Bug 887494 Opened 11 years ago Closed 11 years ago

Bug 884124 introduced a new struct/class mismatch

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: ehoogeveen, Assigned: ehoogeveen)

References

Details

Attachments

(1 file)

As the summary says, bug 884124 introduced a struct/class mismatch in vm/ErrorObject.h, which it added. Said file was probably developed against an older version of the tree (i.e. before bug 886128).

This patch fixes that mismatch, and also adds an include to jsexn.cpp to squash the last "used but never defined" warning (not fixed by part 9 of bug 886205).

I hope this is the last time this warning crops up for a while. Are there any plans to turn this warning into an error? The problem it catches sometimes show up as linker errors, but I'm worried about when they don't. Clang, at least, is pretty good at telling you where the problem originates.
Attachment #767997 - Flags: review?(n.nethercote)
Assignee: general → emanuel.hoogeveen
Comment on attachment 767997 [details] [diff] [review]
Fix struct/class mismatch introduced by part 4 of 884124 and fix a "used but never defined" warning

Review of attachment 767997 [details] [diff] [review]:
-----------------------------------------------------------------

jsexn.cpp already has |#include "jsfunlines.h"|.  But I'll land the struct mismatch;  thanks for catching it.
Attachment #767997 - Flags: review?(n.nethercote) → review+
I guess someone else caught it first :) Thanks for the review!
https://hg.mozilla.org/mozilla-central/rev/f857417260a9
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: