Bug 887494 - Fix struct/class mismatch introduced by part 4 of 884124.  r=nnethercote.